syntax = "proto3";

package com.pm.proto;

option java_multiple_files = true;
option java_package = "com.pm.proto";
option java_outer_classname = "CustomerProto";

//Define messages

//basic consumer object
message Customer{
  string id =1;
  string firstName =2;
  string lastName =3;
  string email = 4;
  string address = 5;
  string birthDate = 6;
}
message GetCustomerByIdRequest{
  string id = 1;
}
message GetCustomerResponse{
  Customer customer = 1;
}
message CreateCustomerRequest{
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string address = 4;
  string birthDate = 5;

}
message CreateCustomerResponse{
  string firstName = 1;
  string lastName = 2;
  string status = 3;
}

message UpdateCustomerRequest{
  string firstName =1;
  string lastName =2;
  string email = 3;
  string address = 4;
  string birthDate = 5;
}
message UpdateCustomerResponse{
  Customer consumer = 1;
}
message DeleteCustomerRequest{
  string id = 1;
}
message DeleteCustomerResponse{
  string message = 1;
}

service CustomerService{
  rpc GetCustomerById(GetCustomerByIdRequest) returns (GetCustomerResponse);
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse);
  rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
}